# patterns

./: README.md  pyproject.toml
solid/abierto_cerrado/: abierto_cerrado.py  payments.py
solid/base/: original.py
solid/inversion_de_dependencias/: inversion_de_dependencias.py
solid/responsabilidad_unica/: output.py  payment_reader.py  responsabilidad_unica.py
solid/segregacion_de_interfaz/: segregacion_de_interfaz.py
solid/sustitucion_liskov/: sustitucion_liskov.py
