[tool.poetry]
name = "patterns"
version = "0.1.0"
description = ""
authors = ["Argenis Vargas <argenis.vargas@crehana.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.1"
black = "^22.12.0"
isort = "^5.11.4"
flake8 = "^6.0.0"
safety = "^2.3.5"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
